refactor: implement StudentMapper and clean up StudentService